@@ -1,5 +1,17 @@
 2010-10-20  Benjamin Kosnik  <bkoz@redhat.com>
 
+	* include/bits/char_traits.h: Add constexpr as per N3126 draft.
+	* testsuite/21_strings/char_traits/requirements/constexpr_functions.cc:
+	New.
+
+2010-10-20  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* include/tr1_impl/array: Add constexpr as per N3126 draft.
+	* testsuite/23_containers/array/requirements/
+	constexpr_functions.cc: New.
+
+2010-10-20  Benjamin Kosnik  <bkoz@redhat.com>
+
 	* include/bits/shared_ptr.h: Revert changes.
 	* include/bits/unique_ptr.h: Same.
 
